// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO dlBeDT aje-input__text aje-input--default float-label is-medium"
  >
    <label
      class="sc-gtsqUy hMTsbS aje-label aje-label"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      Text Label
    </label>
    <p
      class="sc-dlniIP jVWAsB aje-label--message"
      id="react-aria-:r3:"
    >
      message
    </p>
    <input
      aria-describedby="react-aria-:r3: react-aria-:r4:"
      aria-labelledby="react-aria-:r1:"
      class="sc-gKAaef kZprgu"
      id="react-aria-:r0:"
      placeholder="placeholder"
      type="text"
      value="content"
    />
    <p
      class="sc-hKFymg fZIskg aje-label--error"
      id="react-aria-:r4:"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-jSFipO dlBeDT aje-input__text aje-input--floating float-label is-medium"
  >
    <div
      class="sc-eCAqax kebOaS"
    >
      <input
        aria-describedby="react-aria-:r8: react-aria-:r9:"
        aria-labelledby="react-aria-:r6:"
        class="sc-gKAaef kZprgu"
        id="react-aria-:r5:"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class="sc-gtsqUy hMTsbS aje-label aje-label"
        for="react-aria-:r5:"
        id="react-aria-:r6:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-dlniIP jVWAsB aje-label--message"
      id="react-aria-:r8:"
    >
      message
    </p>
    <p
      class="sc-hKFymg fZIskg aje-label--error"
      id="react-aria-:r9:"
    >
      some error
    </p>
  </div>
</DocumentFragment>
`;
